syntax = "proto3";

package server;

option go_package = "github.com/Andromaril/Gopher-and-secrets/server/proto";

message RegisterRequest {
   string login = 1;
   string password = 2;
}

message RegisterResponse {
   int64 user_id = 1;
}

message LoginRequest {
   string login = 1;
   string password = 2;
}

message LoginResponse {
    string token = 1; 
}

message AddSecretRequest {
   string secret = 2;
   string meta = 3;
   string comment = 4;
}

message AddSecretResponse {
   int64 secret_id = 1; 
}

message Secret {
   int64 secret_id = 1; 
   int64 user_id = 2;
   string secret = 3;
   string meta = 4;
   string comment = 5;
}

message GetSecretRequest {
   string meta = 1;
}

message GetSecretResponse {
   repeated Secret secret = 1; 

}

message UpdateSecretRequest {
   string secret = 2;
   string secret_new = 3;
}

message UpdateSecretResponse {
   string status = 1; 
}

message DeleteSecretRequest {
   string secret = 2;
}

message DeleteSecretResponse {
   string status = 1; 
}

message GetAllRequest {
   int64 user_id = 1;
}

message GetAllResponse {
   repeated Secret secret = 1; 

}

service Auth {
   rpc Register (RegisterRequest) returns (RegisterResponse);
   rpc Login (LoginRequest) returns (LoginResponse);
   rpc AddSecret (AddSecretRequest) returns (AddSecretResponse);
   rpc GetSecret (GetSecretRequest) returns (GetSecretResponse);
   rpc UpdateSecret (UpdateSecretRequest) returns (UpdateSecretResponse);
   rpc DeleteSecret (DeleteSecretRequest) returns (DeleteSecretResponse);
   rpc GetAll (GetAllRequest) returns (GetAllResponse);
}